@@ -1,30 +1,38 @@
 package ru.gaiduk.snake.game;
 
+import me.ippolitov.fit.snakes.SnakesProto;
 import ru.gaiduk.snake.math.Vector2;
 
 import java.util.ArrayDeque;
+import java.util.ArrayList;
+import java.util.Objects;
 
 public class Snake {
 
     private int boardHeight;
     private int boardWidth;
 
-    private ArrayDeque<Vector2> snake;
+    private ArrayList<Vector2> snake;
 
     private Vector2 direction;
 
     private boolean hasEatenOnThisIteration = false;
+    private SnakesProto.GameState.Snake.SnakeState state = SnakesProto.GameState.Snake.SnakeState.ALIVE;
 
-    public Snake(Vector2 headPos, int boardHeight, int boardWidth) {
+    private int playerId;
+
+    public Snake(Vector2 headPos, int boardHeight, int boardWidth, int playerId) {
         init(boardHeight, boardWidth);
-        snake = new ArrayDeque<>();
+        snake = new ArrayList<>();
         snake.add(Vector2.clamp(headPos, boardWidth, boardHeight));
+        this.playerId = playerId;
     }
 
-    public Snake(int x, int y, int boardHeight, int boardWidth) {
+    public Snake(int x, int y, int boardHeight, int boardWidth, int playerId) {
         init(boardHeight, boardWidth);
-        snake = new ArrayDeque<>();
+        snake = new ArrayList<>();
         snake.add(Vector2.clamp(new Vector2(x, y), boardWidth, boardHeight));
+        this.playerId = playerId;
     }
 
     private void init(int boardHeight, int boardWidth) {
@@ -41,21 +49,21 @@ public class Snake {
         }
     }
 
-    public ArrayDeque<Vector2> getSegments() { return snake.clone(); }
+    public ArrayList<Vector2> getSegments() {
+        return (ArrayList<Vector2>) snake.clone();
+    }
 
     public Vector2 getSnakeHead() {
-        return snake.getFirst();
+        return snake.get(0);
     }
 
     public void move() {
 
-        var head = snake.getFirst();
-//        System.out.println("head: " + head.getX() + " " + head.getY());
+        var head = snake.get(0);
         var movedHead = Vector2.clamp(new Vector2(head.getX() + direction.getX(), head.getY() + direction.getY()), boardWidth, boardHeight);
-//        System.out.println("movedHead: " + movedHead.getX() + " " + movedHead.getY());
 
-        snake.addFirst(movedHead);
-        snake.pollLast();
+        snake.add(0, movedHead);
+        snake.remove(snake.size() - 1);
     }
 
     public boolean eatOn(Vector2 pos){
@@ -102,15 +110,78 @@ public class Snake {
             return true;
         }
 
-        var head = snake.pollFirst();
+        var head = snake.get(0);
         var movedHead = new Vector2(head.getX() + direction.getX(), head.getY() + direction.getY());
 
-        if(snake.peekFirst().equals(movedHead)) {
-            snake.addFirst(head);
+        if(snake.get(1).equals(movedHead)) {
             return false;
         }
 
-        snake.addFirst(head);
         return true;
     }
+
+    public SnakesProto.Direction getDirection() {
+        if(direction.getX() == 1) {
+            return SnakesProto.Direction.RIGHT;
+        } else if (direction.getX() == -1) {
+            return SnakesProto.Direction.LEFT;
+        } else if(direction.getY() == 1) {
+            return SnakesProto.Direction.UP;
+        } else {
+            return SnakesProto.Direction.DOWN;
+        }
+    }
+
+    public ArrayList<Vector2> getKeyPoints() {
+
+        if(snake.size() == 1) {
+            return getSegments();
+        }
+
+        ArrayList<Vector2> result = new ArrayList<>();
+
+        result.add(getSnakeHead());
+
+        if(snake.size() == 2) {
+            result.add(Vector2.Sub(snake.get(1), getSnakeHead()));
+            return result;
+        }
+
+        Vector2 prevDirection = Vector2.Sub(snake.get(1), getSnakeHead());
+        Vector2 curDirection;
+        int amount = 1;
+
+        for(int i = 1; i < snake.size() - 1; i++) {
+            curDirection = Vector2.Sub(snake.get(i + 1), snake.get(i));
+            if(prevDirection.equals(curDirection)) {
+                amount++;
+            } else {
+                result.add(Vector2.Mul(prevDirection, amount));
+                amount = 1;
+                prevDirection = curDirection;
+            }
+        }
+
+        result.add(Vector2.Mul(prevDirection, amount));
+
+        return result;
+
+    }
+
+    public SnakesProto.GameState.Snake convertToProtoSnake() {
+        var builder = SnakesProto.GameState.Snake.newBuilder()
+                .setState(state)
+                .setPlayerId(playerId)
+                .setHeadDirection(getDirection());
+
+        var head = getSnakeHead();
+
+        for (var p : getKeyPoints()) {
+            builder.addPoints(p.convertToCoord());
+        }
+
+        return builder.build();
+
+    }
+
 }
